Bug 73570 - SIGSEGV in weston_keyboard_set_focus
Summary: SIGSEGV in weston_keyboard_set_focus
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-13 20:38 UTC by Anu Reddy
Modified: 2014-01-21 22:07 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Seat_back_gdb_backtrace (2.75 KB, text/plain)
2014-01-13 20:40 UTC, Anu Reddy
Details

Description Anu Reddy 2014-01-13 20:38:22 UTC
1. Configure Weston.ini with seat=back0
Example:
Output
Name=HDMI2
Seat=back0

2. Launch Weston : weston-launch -- -i5&
3. Execute Weston-terminal
4. Allow Weston to sleep
5. click on green circle to unlock the screen
6. Observe Weston crash

Software Stack:

wayland (HEAD) 1.3.92-0-gc102c20
drm (HEAD) libdrm-2.4.50-0-g4c5de72
mesa (HEAD) remotes/origin/10.0-0-g3a62718
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
weston (HEAD) 1.3.92-0-gb637a40
Comment 1 Anu Reddy 2014-01-13 20:40:39 UTC
Created attachment 91997 [details]
Seat_back_gdb_backtrace
Comment 2 Kristian Høgsberg 2014-01-17 21:14:02 UTC
commit e61d2f481201b51780e284a417071ed655d0bfe8
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Fri Jan 17 12:18:53 2014 -0800

    shell: Don't assign keyboard focus for seats without keyboard
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=73570


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.